--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<parent>
+		<groupId>com.czb.brd</groupId>
+		<artifactId>brd-sdk-parent</artifactId>
+		<version>1.4-SNAPSHOT</version>
+	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.kvn.blade</groupId>
 	<artifactId>rpcblade</artifactId>
