--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.guozz.blade</groupId>
-	<artifactId>rpcblade</artifactId>
+	<artifactId>guozz-rpcblade</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 
 	<properties>
